--- a/config/database.yml
+++ b/config/database.yml
@@ -22,4 +22,10 @@ test:
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: <%= ENV['share-kaji'] %>
+  adapter: mysql2
+  encoding: utf8mb4
+  charset: utf8mb4
+  collation: utf8mb4_general_ci
+  host: <%= ENV['rds-mysql-server.c617ihcobnye.ap-northeast-1.rds.amazonaws.com'] %>
+  username: <%= ENV['root'] %>
